--- a/BookStore/Web.config
+++ b/BookStore/Web.config
@@ -8,8 +8,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
-  <connectionStrings>
-    <add name="BookStoreContext" connectionString="Server=tcp:khangdbserver.database.windows.net,1433;Initial Catalog=khangdb;Persist Security Info=False;User ID=taigama;Password=Khang123;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
+  <connectionStrings configSource="ConnectionStrings.config">
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
