--- a/BookStore/Bookstore.csproj
+++ b/BookStore/Bookstore.csproj
@@ -203,7 +203,6 @@
     <Content Include="Assets\css\animate.css" />
     <Content Include="Assets\css\bootstrap-select.min.css" />
     <Content Include="Assets\css\bootstrap.css" />
-    <Content Include="Assets\css\bootstrap.min.css" />
     <Content Include="Assets\css\override-navbar.css" />
     <Content Include="Assets\css\checkout.css" />
     <Content Include="Assets\css\font-awesome.min.css" />
@@ -216,6 +215,7 @@
     <Content Include="Assets\css\sb-admin-2.min.css" />
     <Content Include="Assets\css\scrolltable.css" />
     <Content Include="Assets\css\shop.css" />
+    <Content Include="Assets\css\side-style.css" />
     <Content Include="Assets\css\style.css" />
     <Content Include="Assets\css\toast.css" />
     <Content Include="Assets\font-awesome\css\font-awesome.css" />
@@ -277,6 +277,7 @@
     <Content Include="Assets\js\html5shiv.js" />
     <Content Include="Assets\js\jquery-3.1.1.min.js" />
     <Content Include="Assets\js\jquery-ui.js" />
+    <Content Include="Assets\js\jquery.autoellipsis-1.0.10.min.js" />
     <Content Include="Assets\js\jquery.js" />
     <Content Include="Assets\js\jquery.prettyPhoto.js" />
     <Content Include="Assets\js\jquery.scrollUp.min.js" />
@@ -568,13 +569,11 @@
     <Content Include="Views\Search1\SideSearch.cshtml" />
     <Content Include="Views\Shared\Header1.cshtml" />
     <Content Include="Views\Shared\_MainLayout1.cshtml" />
-    <Content Include="Views\Search1\ItemPartial.cshtml" />
+    <Content Include="Views\Shared\ItemPartial.cshtml" />
     <Content Include="Views\Cart\CartPartial.cshtml" />
     <Content Include="Views\Search1\Index.cshtml" />
-    <Content Include="Views\Home1\Author.cshtml" />
     <Content Include="Views\Home1\Index.cshtml" />
-    <Content Include="Views\Home1\ItemPartial.cshtml" />
-    <Content Include="Views\Home1\SideSearch.cshtml" />
+    <Content Include="Views\Home1\SideMenu.cshtml" />
     <Content Include="Views\Shared\Header_Navbar.cshtml" />
     <Content Include="Views\MyShared\MainLayout.cshtml" />
     <Content Include="Views\MyShared\Navbar.cshtml" />
@@ -611,7 +610,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>51196</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
