--- a/BookStore/Bookstore.csproj
+++ b/BookStore/Bookstore.csproj
@@ -577,6 +577,7 @@
     <Content Include="Views\Shared\Header_Navbar.cshtml" />
     <Content Include="Views\MyShared\MainLayout.cshtml" />
     <Content Include="Views\MyShared\Navbar.cshtml" />
+    <Content Include="Views\Home1\Author.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
