--- a/BookStore/BookStore.csproj
+++ b/BookStore/BookStore.csproj
@@ -217,7 +217,7 @@
     <Content Include="Assets\css\scrolltable.css" />
     <Content Include="Assets\css\shop.css" />
     <Content Include="Assets\css\side-style.css" />
-    <Content Include="Assets\css\style.css" />
+    <Content Include="Assets\css\style.bak.css" />
     <Content Include="Assets\css\toast.css" />
     <Content Include="Assets\font-awesome\css\font-awesome.css" />
     <Content Include="Assets\font-awesome\css\font-awesome.min.css" />
@@ -568,14 +568,14 @@
     <Content Include="Views\Staff\AddImport.cshtml" />
     <Content Include="Views\Staff\Finance.cshtml" />
     <Content Include="Views\Search1\SideSearch.cshtml" />
-    <Content Include="Views\Shared\Header1.cshtml" />
-    <Content Include="Views\Shared\_MainLayout1.cshtml" />
+    <Content Include="Views\Shared\Header1.bak.cshtml" />
+    <Content Include="Views\Shared\_MainLayout1.bak.cshtml" />
     <Content Include="Views\Shared\ItemPartial.cshtml" />
     <Content Include="Views\Cart\CartPartial.cshtml" />
     <Content Include="Views\Search1\Index.cshtml" />
     <Content Include="Views\Home1\Index.cshtml" />
     <Content Include="Views\Home1\SideMenu.cshtml" />
-    <Content Include="Views\Shared\Header_Navbar.cshtml" />
+    <Content Include="Views\Shared\Header_Navbar.bak.cshtml" />
     <Content Include="Views\MyShared\MainLayout.cshtml" />
     <Content Include="Views\MyShared\Navbar.cshtml" />
     <Content Include="Views\Home1\Author.cshtml" />
