--- a/BookStore/BookStore.csproj
+++ b/BookStore/BookStore.csproj
@@ -201,6 +201,7 @@
     <Content Include="Assets\css\bootstrap-select.min.css" />
     <Content Include="Assets\css\bootstrap.css" />
     <Content Include="Assets\css\bootstrap.min.css" />
+    <Content Include="Assets\css\shopper-info.css" />
     <Content Include="Assets\css\override-navbar.css" />
     <Content Include="Assets\css\checkout.css" />
     <Content Include="Assets\css\font-awesome.min.css" />
@@ -339,7 +340,6 @@
     <Content Include="Assets\font-awesome\scss\_stacked.scss" />
     <Content Include="Assets\font-awesome\scss\_variables.scss" />
     <Content Include="ConnectionStrings.config" />
-    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\quanlynhasach - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\taigama-bookstore - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -571,6 +571,7 @@
     <Content Include="Views\Home\Author.cshtml" />
     <Content Include="Views\Contact\Index - Copy.cshtml" />
     <Content Include="Views\Cart\Index - Copy.cshtml" />
+    <Compile Include="ViewModels\UserViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
