--- a/BookStore/Bookstore.csproj
+++ b/BookStore/Bookstore.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Controllers\BlogController.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
+    <Compile Include="Controllers\ExampleController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
@@ -197,6 +198,10 @@
     <Compile Include="ViewModels\RegisterViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\BookStore.mdf" />
+    <Content Include="App_Data\BookStore_log.ldf">
+      <DependentUpon>BookStore.mdf</DependentUpon>
+    </Content>
     <Content Include="Assets\css\animate.css" />
     <Content Include="Assets\css\bootstrap-select.min.css" />
     <Content Include="Assets\css\bootstrap.css" />
@@ -339,7 +344,9 @@
     <Content Include="Assets\font-awesome\scss\_spinning.scss" />
     <Content Include="Assets\font-awesome\scss\_stacked.scss" />
     <Content Include="Assets\font-awesome\scss\_variables.scss" />
-    <Content Include="ConnectionStrings.config" />
+    <Content Include="ConnectionStrings.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Properties\PublishProfiles\quanlynhasach - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\taigama-bookstore - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -359,6 +366,22 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="UploadFiles\3EHCZ1P9XDimg139_13.jpg" />
+    <Content Include="UploadFiles\7Q4QN42GQ3toi_thay_hoa_vang.jpg" />
+    <Content Include="UploadFiles\B56G3UL4AMquan-go-do-len_1.jpg" />
+    <Content Include="UploadFiles\D1ZDMK58A1img523_10.jpg" />
+    <Content Include="UploadFiles\D7U0VIY424product4.jpg" />
+    <Content Include="UploadFiles\D9PZ3MK5PJproduct1.jpg" />
+    <Content Include="UploadFiles\OFIOJUXDZGsherlock-holme-1.u4939.d20170630.t113348.643376.jpg" />
+    <Content Include="UploadFiles\S24BNTONMBproduct2.jpg" />
+    <Content Include="UploadFiles\S2BWWS3FCXimg894_9.jpg" />
+    <Content Include="UploadFiles\SFKKNJH4YZTony-Buoi-Sang.jpg" />
+    <Content Include="UploadFiles\TA1RQKL81Xcam_nang_cua_nguoi.jpg" />
+    <Content Include="UploadFiles\WEAYDDFRQWnang_prym.jpg" />
+    <Content Include="UploadFiles\XUZKYOSSN7e3khdeda.u3059.d20170605.t093650.426505.jpg" />
+    <Content Include="UploadFiles\XWRERREU8OPaulo-Coelho.jpg" />
+    <Content Include="UploadFiles\Y4T4O8MRPYmulti.jpg" />
+    <Content Include="UploadFiles\YUV28G0QSZnna.jpg" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -419,9 +442,9 @@
     <Content Include="Views\Contact\Index - Copy.cshtml" />
     <Compile Include="ViewModels\UserViewModel.cs" />
     <Content Include="Views\Cart\OrderPartial.cshtml" />
+    <Content Include="Views\Example\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Assets\images\cart\" />
     <Folder Include="Views\Base\" />
   </ItemGroup>
