--- a/BookStore/Web.config
+++ b/BookStore/Web.config
@@ -69,7 +69,7 @@
   </system.codedom>
   <entityFramework>
     <contexts>
-      <context type="BookStore.Data.BookStoreContext, BookStore">
+      <context type="BookStore.Data.BookStoreContext, BookStore" disableDatabaseInitialization="true">
         <databaseInitializer type="BookStore.Data.BookStoreInitializer, BookStore"/>
       </context>
     </contexts>
